// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer selector should return drawer selector state and actions 1`] = `
{
  "closeDrawer": [Function],
  "drawerData": {
    "children": null,
    "footer": null,
    "isOpen": false,
    "onModalClose": [Function],
    "title": "",
  },
  "openDrawer": [Function],
  "openState": "CLOSE",
}
`;

exports[`Drawer selector should return drawer state on drawer data set using openDrawer 1`] = `
{
  "children": <div>
    children 
  </div>,
  "footer": <div>
    footer 
  </div>,
  "isOpen": true,
  "onModalClose": [MockFunction],
  "title": "title",
}
`;

exports[`Drawer selector should return drawer state with initial value 1`] = `
{
  "children": null,
  "footer": null,
  "isOpen": false,
  "onModalClose": [Function],
  "title": "",
}
`;
